# bashleaks

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.ps1  build.sh  demo.html  go.mod  go.sum  readme.md  test.sh  test_script.sh
cmd/bashleaks/: main.go
pkg/report/: report.go
pkg/rules/: powershell_rules.go  rules.go
pkg/scanner/: scanner.go
src/: analyzer.rs  cli.rs  main.rs  models.rs  parser.rs  reporters.rs  rules.rs  runtime.rs  utils.rs
